fix: spacing on about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,7 @@ div .btn--red:focus {
 	width: 100%;
 	background: url("../images/phil_tiny.JPG") no-repeat center center;
 	background-size: 100%;
+    justify-content: center;
 }
 
 @media screen and (min-width: 992px) {
